基于分布式session修改设置中心和首页页面的接口