@@ -1,6 +1,5 @@
 package top.easyblog.controller;
 
-import com.alibaba.fastjson.JSON;
 import com.github.pagehelper.PageInfo;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
@@ -13,12 +12,10 @@ import top.easyblog.bean.User;
 import top.easyblog.commons.pagehelper.PageParam;
 import top.easyblog.commons.pagehelper.PageSize;
 import top.easyblog.commons.utils.CollectionUtils;
+import top.easyblog.commons.utils.UserUtil;
 import top.easyblog.service.IArticleService;
 
-import javax.servlet.http.Cookie;
 import javax.servlet.http.HttpServletRequest;
-import java.io.UnsupportedEncodingException;
-import java.net.URLDecoder;
 import java.util.List;
 import java.util.Objects;
 
@@ -38,12 +35,12 @@ public class WelcomeController {
 
     @GetMapping(value = "/")
     public String index(Model model, @RequestParam(defaultValue = "1") int pageNo, HttpServletRequest request)  {
-        try {
+       /* try {
             Cookie[] cookies = request.getCookies();
             if (Objects.nonNull(cookies)) {
                 for (Cookie cookie : cookies) {
                     if ("USER-INFO".equalsIgnoreCase(cookie.getName())) {
-                        String userJsonStr=URLDecoder.decode(cookie.getValue(), "utf-8");
+                        String userJsonStr=URLDecoder.decode(cookie.getValue(), String.valueOf(CharsetUtil.UTF_8));
                         User user = JSON.parseObject(userJsonStr, User.class);
                         model.addAttribute("user", user);
                         break;
@@ -52,7 +49,9 @@ public class WelcomeController {
             }
         }catch (UnsupportedEncodingException e){
             log.error(e.getMessage());
-        }
+        }*/
+        User user = UserUtil.getUserFromCookie(request);
+        model.addAttribute("user",user);
         //查询最近1个月内的文章
         PageInfo<Article> newestArticlesPages = articleService.getAllUserNewestArticlesPage(new PageParam(pageNo, PageSize.DEFAULT_PAGE_SIZE.getPageSize()));
         //查询访问量最高的19篇最近的文章用于首页大图、访问排行、特别推荐的显示
